# XXMI-Launcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  game-crash-report.md  in-game-issue-report.md  xxmi-launcher-bug-report.md
Locale/: locale_index.toml
Locale/Strings/CN/: CN_2.0.0.toml  CN_2.0.1.toml  CN_2.0.5.toml  CN_2.1.2.toml  CN_2.1.5.toml  CN_2.1.6.toml  CN_2.1.9.toml  CN_2.2.0.toml  CN_2.2.1.toml
Locale/Strings/EN/: EN_2.0.0.toml  EN_2.0.1.toml  EN_2.0.5.toml  EN_2.1.2.toml  EN_2.1.5.toml  EN_2.1.6.toml  EN_2.1.9.toml  EN_2.2.0.toml  EN_2.2.1.toml
Locale/Strings/ES_MX/: ES_MX_2.0.0.toml  ES_MX_2.0.1.toml  ES_MX_2.0.5.toml  ES_MX_2.1.2.toml  ES_MX_2.1.5.toml  ES_MX_2.1.6.toml  ES_MX_2.1.9.toml  ES_MX_2.2.0.toml  ES_MX_2.2.1.toml
Locale/Strings/JA/: JA_2.0.0.toml  JA_2.0.1.toml  JA_2.0.5.toml  JA_2.1.2.toml  JA_2.1.5.toml  JA_2.1.6.toml  JA_2.1.9.toml  JA_2.2.0.toml  JA_2.2.1.toml
Locale/Strings/KR/: KR_2.0.0.toml  KR_2.0.1.toml  KR_2.0.5.toml  KR_2.1.2.toml  KR_2.1.5.toml  KR_2.1.6.toml  KR_2.1.9.toml  KR_2.2.0.toml  KR_2.2.1.toml
Locale/Strings/PL/: PL_2.0.0.toml  PL_2.0.1.toml  PL_2.0.5.toml  PL_2.1.2.toml  PL_2.1.5.toml  PL_2.1.6.toml  PL_2.1.9.toml  PL_2.2.0.toml  PL_2.2.1.toml
Locale/Strings/RU/: RU_2.0.0.toml  RU_2.0.1.toml  RU_2.0.5.toml  RU_2.1.2.toml  RU_2.1.5.toml  RU_2.1.6.toml  RU_2.1.9.toml  RU_2.2.0.toml  RU_2.2.1.toml
Resources/i18n/: en.json  ja.json  ko.json  zh.json
Themes/Default/: custom-tkinter-theme.json
src/xxmi_launcher/: Miyabi  app.py
src/xxmi_launcher/core/: application.py  config_manager.py  error_manager.py  event_manager.py  i18n_manager.py  locale_manager.py  mod_manager.py  package_manager.py  path_manager.py
src/xxmi_launcher/core/utils/: dll_injector.py  github_client.py  ini_handler.py  loader3dm.py  process_tracker.py  proxy.py  security.py  sleepy.py  system_info.py
src/xxmi_launcher/gui/: events.py  vars.py
src/xxmi_launcher/gui/classes/: containers.py  element.py  tooltip.py  widgets.py  windows.py
src/xxmi_launcher/gui/windows/: message_window.py
src/xxmi_launcher/gui/windows/main/: main_window.py  mod_manager_frame.py
src/xxmi_launcher/gui/windows/main/donate_frame/: donate_frame.py
src/xxmi_launcher/gui/windows/main/launcher_frame/: bottom_bar.py  launcher_frame.py  tool_bar.py  top_bar.py
src/xxmi_launcher/gui/windows/main/message_frame/: message_frame.py
src/xxmi_launcher/gui/windows/settings/: settings_frame.py  settings_tabs_frame.py  settings_window.py
tests/: conftest.py  test_infrastructure_validation.py
(+4 files in other folders)
